refactor: 修改仓库分支统计
